--- a/package.json
+++ b/package.json
@@ -3,8 +3,22 @@
   "version": "1.0.0",
   "description": "API for a simple mock shop system",
   "main": "server.js",
+  "eslintConfig": {
+    "standard": {
+      "env": [
+        "mocha",
+        "chai"
+      ]
+    }
+  },
+  "standard": {
+    "env": [
+      "mocha",
+      "chai"
+    ]
+  },
   "scripts": {
-    "test": "test",
+    "test": "mocha --timeout 10000",
     "start": "node server.js",
     "server": "nodemon server.js"
   },
@@ -24,10 +38,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cloudinary": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^7.0.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
@@ -37,6 +53,7 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.4",
     "sequelize-cli": "^5.5.1",
+    "supertest": "^4.0.2",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "uuid": "^3.4.0"
